--- a/github/index.html
+++ b/github/index.html
@@ -60,10 +60,10 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I am <strong>Maxima Art</strong>, and <a href="http://html5up.net/license">I'm</a> here to help you<br />
+								with your book covers, character art and ideas! <a href="http://html5up.net">HTML5 UP</a>.</h2>
+								<p>Bringing to life your ideas<br />
+								All rights reserved.</p>
 							</header>
 
 							<footer>
@@ -86,9 +86,9 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image Water"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<Water - *SOLD*</h3>
 										</header>
 									</article>
 									<article class="item">
